--- a/Gemma/WebContent/WEB-INF/web.xml
+++ b/Gemma/WebContent/WEB-INF/web.xml
@@ -39,6 +39,7 @@
 		classpath:com/gemma/web/config/dao-context.xml
 		classpath:com/gemma/web/config/service-context.xml
 		classpath:com/gemma/web/config/security-context.xml
+		classpath:com/gemma/web/config/file-context.xml
 		classpath:com/gemma/web/config/pager-context.xml
 		classpath:com/gemma/web/config/accounting-config.xml
 		</param-value>
