--- a/Gemma/pom.xml
+++ b/Gemma/pom.xml
@@ -225,5 +225,10 @@
 			<artifactId>antlr4-runtime</artifactId>
 			<version>4.5.2-1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.braintreepayments.gateway</groupId>
+			<artifactId>braintree-java</artifactId>
+			<version>2.61.0</version>
+		</dependency>
 	</dependencies>
 </project>
