--- a/Gemma/WebContent/WEB-INF/web.xml
+++ b/Gemma/WebContent/WEB-INF/web.xml
@@ -41,6 +41,7 @@
 		classpath:com/gemma/web/config/security-context.xml
 		classpath:com/gemma/web/config/file-context.xml
 		classpath:com/gemma/web/config/pager-context.xml
+		classpath:com/gemma/web/config/email-context.xml
 		</param-value>
 	</context-param>
 	<context-param>
