--- a/Gemma/pom.xml
+++ b/Gemma/pom.xml
@@ -230,5 +230,10 @@
 			<artifactId>braintree-java</artifactId>
 			<version>2.61.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
 	</dependencies>
 </project>
