--- a/Gemma/pom.xml
+++ b/Gemma/pom.xml
@@ -240,5 +240,10 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.braintreepayments.gateway</groupId>
+			<artifactId>braintree-java</artifactId>
+			<version>2.62.0</version>
+		</dependency>
 	</dependencies>
 </project>
