--- a/Gemma/WebContent/WEB-INF/web.xml
+++ b/Gemma/WebContent/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 	<description>Spring Database</description>
 	<resource-ref>
 		<description>DB Connection</description>
-		<res-ref-name>jdbc/spring</res-ref-name>
+		<res-ref-name>jdbc/donzalma_gemma</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
