--- a/Gemma/test/com/gemma/spring/web/test/config/jdbc.properties
+++ b/Gemma/test/com/gemma/spring/web/test/config/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.username = root
 jdbc.password = 
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/peachytest
+jdbc.url = jdbc:mysql://localhost:3306/gemmatest
 
