--- a/Gemma/.project
+++ b/Gemma/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Gemma</name>
+	<name>PeachysCoffee</name>
 	<comment></comment>
 	<projects>
 	</projects>
